--- a/user.html
+++ b/user.html
@@ -26,13 +26,13 @@
 </head>
 <body>
     
-    <div class="container mt-5">
+    <div class="container text-center mt-5">
         <div id="dashboard_header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg bg-light">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse col-md-11" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
                       <span id="welcome_message"></span>
@@ -40,78 +40,71 @@
                     <li class="nav-item">
                         <span id="admin_panel"></span>
                       </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#" onclick="Logout()">Logout</a>
-                    </li>
+                  
                   </ul>
+                </div>
+                <div class="col-md-1">
+                    <a class="nav-link" href="#" onclick="Logout()">Logout</a>
                 </div>
               </nav>
         </div>
         <div id="dashboard_content">
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center" style="margin-top:25px">
                     <h1>Game List</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/rocket/index.html'">
                         <img src="images/1.png">
                         <p>Rocket</p>
                     </button>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/color-dice/index.html'">
                         <img src="images/2.png">
                         <p>Color Dice</p>
                     </button>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/mine-gold/index.html'">
                         <img src="images/3.png">
                         <p>Mine Gold</p>
                     </button>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/dream-catcher-wheel/index.html'">
                         <img src="images/4.png">
                         <p>Dream Catcher Wheel</p>
                     </button>
                 </div>
-                <div class="col-md-4">
+            </div>
+            <div class="row">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/plinko/index.html'">
                         <img src="images/5.jpg">
                         <p>Plinko</p>
                     </button>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/block-puzzle/index.html'">
                         <img src="images/6.png">
                         <p>Block Puzzle</p>
                     </button>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/angry-bird/index.html'">
                         <img src="images/7.png">
                         <p>Angry Bird</p>
                     </button>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <button class="btn btn-light square-button" onclick="window.location.href='games/pac-man/index.html'">
                         <img src="images/8.png">
                         <p>PAC Man</p>
                     </button>
                 </div>
-                <!-- <div class="col-md-4">
-                    <button class="btn btn-light square-button" onclick="window.location.href='games/pac-man/index.html'">
-                        <img src="images/8.png">
-                        <p>PAC Man</p>
-                    </button>
-                </div> -->
             </div>
         </div>
     </div>
