--- a/games/rocket/index.html
+++ b/games/rocket/index.html
@@ -104,10 +104,9 @@
           axios.get("https://gameportalapi.onrender.com/user/get/"+decoded_token.userId, {},
           {
             headers: {
-              'Access-Control-Allow-Origin': '*',
-              'Content-Type': 'application/json',
-            }}
-          )
+              Authorization: `Bearer ${token}`
+            }
+          })
           .then(response => {
             var uid = response.data.rows[0].id;
             var username = response.data.rows[0].username;
