--- a/games/rocket/index.html
+++ b/games/rocket/index.html
@@ -91,13 +91,7 @@
                 axios.get("https://gameportalapi.onrender.com/user/get/"+decoded_token.userId,
                     {headers: { authorization: `Bearer ${token}` }})
                     .then(response => {
-                      console.log(JSON.stringify(response.data));
-
-                      var uid = response.data.id;
-                      var username = response.data.username;
-                      var credit = response.data.credit;
-
-                      gameInstance.SendMessage('GameManager', 'GetUserInfo', uid, username, credit);
+                      unityInstance.SendMessage('GameManager', 'GetUserInfo', decoded_token.userId, response.data.username, response.data.credit);
                     })
                     .catch(error => {
                         console.log(error);
