--- a/games/rocket/index.html
+++ b/games/rocket/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Rocket</title>
+    <title>Aeroplane</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -91,10 +91,7 @@
                 axios.get("https://gameportalapi.onrender.com/user/get/"+decoded_token.userId,
                     {headers: { authorization: `Bearer ${token}` }})
                     .then(response => {
-
-                      var data = `${decoded_token.userId}, ${response.data.username}, ${response.data.credit}`;
-
-                      unityInstance.SendMessage('GameManager', 'GetUserInfo', data);
+                      unityInstance.SendMessage('GameManager', 'GetUserInfo', decoded_token.userId, response.data.username, response.data.credit);
                     })
                     .catch(error => {
                         console.log(error);
