--- a/games/rocket/index.html
+++ b/games/rocket/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <script>
-      const hideFullScreenButton = "true";
+      const hideFullScreenButton = "";
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/rocket.loader.js";
       const config = {
