--- a/games/rocket/index.html
+++ b/games/rocket/index.html
@@ -87,7 +87,7 @@
                 {
                     window.stop();
                     localStorage.removeItem("token");
-                    window.location.href = 'login.html';
+                    window.location.href = './login.html';
                 }
 
                 axios.get("https://gameportalapi.onrender.com/user/get/"+decoded_token.userId,
@@ -104,7 +104,7 @@
             else
             {
               window.stop();
-              window.location.href = 'login.html';
+              window.location.href = './login.html';
             }
           if (canFullscreen) {
             if (!hideFullScreenButton) {
