--- a/gameSetting.html
+++ b/gameSetting.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .square-button {
             width: 200px;
@@ -59,25 +60,7 @@
               </nav>
         </div>
         <div id="dashboard_content">
-
-            <br><br>
-            <h1>Rocket Game Setting</h1>
-            <br><br>
-            <p><i>The total rate need to be <b>100%</b> after sum up</i></p>
-            <div class="panel panel-default">
-                <table id="table" class="table table-sm table-bordered">
-                <thead>
-                    <th>From</th>
-                    <th>To</th>
-                    <th></th>
-                    <th>Rate</th>
-                    <th><button class="btn btn-outline-success" onclick="AddRow()"><i class="fa fa-plus"></i></button></th>
-                </thead>
-                <tbody>
-                    
-                </tbody>
-                </table>
-            </div>
+            <iframe src="rocket_setting.html" name="iframe" height="600px" width="100%"></iframe>
         </div>
         <div class="col-md-12" style="padding: 30px;">
             <button type="button" class="btn btn-danger float-left" onclick="window.location='admin.html'">Discard</button>
@@ -90,7 +73,6 @@
     const welcome_message = document.getElementById("welcome_message");
     const user_panel = document.getElementById("user_panel");
     const token = localStorage.getItem('token');
-    var index = 1;
 
     if (token)
     {
@@ -123,28 +105,6 @@
     {
         localStorage.removeItem('token');
         window.location.href = 'login.html';
-    }
-
-    function AddRow()
-    {
-        var row = document.createElement('tr');
-        row.setAttribute('id','record_'+index);
-        
-        row.innerHTML = `
-            <td><input id='from_${index}' type=number min="0" step="0.01"></td>
-            <td><input id='to_${index}' type=number min="0" step="0.01"></td>
-            <td> = </td>
-            <td><input id='rate${index}' type=number min="0" step="0.01"></td>
-            <td><button class="btn btn-outline-danger" onclick="DeleteRow('record_${index}')"><i class="fa fa-trash"></i></button></td>
-        `
-        document.getElementById('table').appendChild(row);
-
-        index++;
-    }
-
-    function DeleteRow(index)
-    {
-        document.getElementById(index).remove();
     }
 
     function SaveSetting()
