--- a/rocket_setting.html
+++ b/rocket_setting.html
@@ -23,6 +23,12 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12" style="padding: 30px;">
+        <button type="button" class="btn btn-danger float-left" onclick="window.location='admin.html'">Discard</button>
+        <button type="button" class="btn btn-success float-right" onclick="SaveSetting()">Save</button>
+      </div>
+    </div>
   </div>
 
   <!-- Include Bootstrap JS and Chart.js -->
