--- a/admin.html
+++ b/admin.html
@@ -56,7 +56,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="window.location='./rocket_game_setting.html'">
+                    <button class="btn btn-light square-button" onclick="window.location='./gameSetting.html'">
                         <img src="images/1.png">
                         <p>Rocket Game Setting</p>
                     </button>
