--- a/admin.html
+++ b/admin.html
@@ -56,25 +56,25 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="window.location='./gameSetting.html'">
+                    <button class="btn btn-secondary square-button" onclick="window.location='./gameSetting.html?game_type=rocket'">
                         <img src="images/1.png">
                         <p>Rocket Game Setting</p>
                     </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="window.location='./gameSetting.html?game_type=color-dice'">
                         <img src="images/2.png">
                         <p>Color Dice Game Setting</p>
                     </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="">
                         <img src="images/3.png">
                         <p>Mine Gold Game Setting</p>
                     </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="">
                         <img src="images/4.png">
                         <p>Dream Catcher Wheel Game Setting</p>
                     </button>
@@ -82,25 +82,25 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="">
                         <img src="images/5.jpg">
                         <p>Plinko Game Setting</p>
                     </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="">
                         <img src="images/6.png">
                         <p>Block Puzzle Game Setting</p>
                     </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="">
                         <img src="images/7.png">
                         <p>Angry Bird Game Setting</p>
                     </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="btn btn-light square-button" onclick="">
+                    <button class="btn btn-secondary square-button" onclick="">
                         <img src="images/8.png">
                         <p>PAC Man Game Setting</p>
                     </button>
