--- a/gameSetting.html
+++ b/gameSetting.html
@@ -102,8 +102,10 @@
     switch(url_params.get('game_type'))
     {
         case "rocket":
+            iframe.src = "rocket_setting.html";
             break;
         case "color-dice":
+            iframe.src = "color_dice_setting.html";
             break;
     }
 
