--- a/color_dice_setting.html
+++ b/color_dice_setting.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
     </div>
 </body>
 <script>
