--- a/color_dice_setting.html
+++ b/color_dice_setting.html
@@ -28,25 +28,25 @@
                         
                         switch(response.data[i]['winnum'])
                         {
-                            case 0:
+                            case "0":
                                 content += "<td style='color:orange'>Orange</td>";
                                 break;
-                            case 1:
+                            case "1":
                                 content += "<td style='color:purple'>Purple</td>";
                                 break;
-                            case 2:
+                            case "2":
                                 content += "<td style='color:red'>Red</td>";
                                 break;
-                            case 3:
+                            case "3":
                                 content += "<td style='color:gray'>Gray</td>";
                                 break;
-                            case 4:
+                            case "4":
                                 content += "<td style='color:teal'>Teal</td>";
                                 break;
-                            case 5:
+                            case "5":
                                 content += "<td style='color:green'>Green</td>";
                                 break;
-                            case 6:
+                            case "6":
                                 content += "<td>Black</td>";
                                 break;
                         }
