--- a/color_dice_setting.html
+++ b/color_dice_setting.html
@@ -50,7 +50,7 @@
                                 content += "<td>Black</td>";
                                 break;
                         }
-                        content += "<td>"+response.data[i]['created_on']+"</td>";
+                        content += "<td>"+formatDatetime(response.data[i]['created_on'])+"</td>";
                         content += "<td>"+response.data[i]['total_in']+"</td>";
                         content += "<td>"+response.data[i]['total_out']+"</td>";
                         content += "</tr>";
@@ -61,5 +61,20 @@
             .catch(error => {
                 console.log(error);
         });
+
+        function formatDatetime(inputDatetimeStr) {
+            const inputDatetime = new Date(inputDatetimeStr);
+            const options = {
+                year: 'numeric',
+                month: '2-digit',
+                day: '2-digit',
+                hour: '2-digit',
+                minute: '2-digit',
+                second: '2-digit',
+                timeZoneName: 'short'
+            };
+
+            return inputDatetime.toLocaleString('en-US', options);
+        }
 </script>
 </html>
