--- a/color_dice_setting.html
+++ b/color_dice_setting.html
@@ -6,6 +6,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
+<style>
+    
+.table td {
+    text-align: center;
+} 
+
+</style>
 <body>
     <div class="container" id="container">
     </div>
@@ -71,7 +78,6 @@
                 hour: '2-digit',
                 minute: '2-digit',
                 second: '2-digit',
-                timeZoneName: 'short'
             };
 
             return inputDatetime.toLocaleString('en-US', options);
