--- a/color_dice_setting.html
+++ b/color_dice_setting.html
@@ -44,19 +44,19 @@
                                 content += "<td style='color:orange'>Orange <i class='fa fa-square'></i> </td>";
                                 break;
                             case "1":
-                                content += "<td style='color:purple'>Purple</td>";
+                                content += "<td style='color:purple'>Purple <i class='fa fa-square'></i> </td>";
                                 break;
                             case "2":
-                                content += "<td style='color:red'>Red</td>";
+                                content += "<td style='color:red'>Red <i class='fa fa-square'></i> </td>";
                                 break;
                             case "3":
-                                content += "<td style='color:gray'>Gray</td>";
+                                content += "<td style='color:gray'>Gray <i class='fa fa-square'></i> </td>";
                                 break;
                             case "4":
-                                content += "<td style='color:teal'>Teal</td>";
+                                content += "<td style='color:teal'>Teal <i class='fa fa-square'></i> </td>";
                                 break;
                             case "5":
-                                content += "<td style='color:green'>Green</td>";
+                                content += "<td style='color:green'>Green <i class='fa fa-square'></i> </td>";
                                 break;
                             case "6":
                                 content += "<td>Black</td>";
