--- a/games/color-dice/index.html
+++ b/games/color-dice/index.html
@@ -427,7 +427,7 @@
             else
             {
                 window.stop();
-                window.location.href = './login.html';
+                window.location.href = 'login.html';
             }
             ///////////
         }).catch((message) => {
