--- a/games/color-dice/index.html
+++ b/games/color-dice/index.html
@@ -427,7 +427,7 @@
             else
             {
                 window.stop();
-                window.location.replace("./login.html");
+                window.location.replace("https://gameportal.onrender.com/login.html");
             }
             ///////////
         }).catch((message) => {
