--- a/user.html
+++ b/user.html
@@ -117,9 +117,7 @@
     const credit = document.getElementById("credit");
     const admin_panel = document.getElementById("admin_panel");
     const token = localStorage.getItem('token');
-    if (token)
-    {
-        var decoded_token = jwt_decode(token);
+    var decoded_token = jwt_decode(token);
 
         if (decoded_token.exp < Math.floor(Date.now()/1000))
         {
@@ -141,12 +139,36 @@
 
         if(decoded_token.user_type == 0 || decoded_token.user_type == 1)
             admin_panel.innerHTML = '<a class="nav-link" href="admin.html">Admin Panel</a>';
-    }
-    else
-    {
-        window.stop();
-        window.location.href = 'login.html';
-    }
+    // if (token)
+    // {
+    //     var decoded_token = jwt_decode(token);
+
+    //     if (decoded_token.exp < Math.floor(Date.now()/1000))
+    //     {
+    //         window.stop();
+    //         localStorage.removeItem("token");
+    //         window.location.href = 'login.html';
+    //     }
+
+    //     welcome_message.innerHTML = '<a class="nav-link" href="javascript:void(0)">'+decoded_token.username+'</a>';
+        
+    //     axios.get("https://gameportalapi.onrender.com/user/get/"+decoded_token.userId,
+    //     {headers: { authorization: `Bearer ${token}` }})
+    //         .then(response => {
+    //             credit.innerHTML = '<a class="nav-link" href="javascript:void(0)">'+response.data.credit+'</a>';
+    //         })
+    //         .catch(error => {
+    //             console.log(error);
+    //     });
+
+    //     if(decoded_token.user_type == 0 || decoded_token.user_type == 1)
+    //         admin_panel.innerHTML = '<a class="nav-link" href="admin.html">Admin Panel</a>';
+    // }
+    // else
+    // {
+    //     window.stop();
+    //     window.location.href = 'login.html';
+    // }
 
     function Logout()
     {
